Switches out default db, hides scrollbars, fixes dialog graph row width

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ body {
   background: #090F1A;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 .App {
   text-align: center;
   background: #090F1A;
@@ -36,6 +40,7 @@ body {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
